k8s/example.yaml
---
# Source: template/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: http-web-nginx
  namespace: nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 8080
---
# Source: template/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-web-nginx
  namespace: nginx
  labels:
    app: nginx
spec:
   selector:
     app: nginx
   ports:
     - name: http-web
       port: 80
       targetPort: http-web
   type: LoadBalancer
---
# Source: template/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      enableServiceLinks: false
      serviceAccount: nginx
      containers:
        - name: nginx-front
          image: nginx
          ports:
            - name: http-web
              containerPort: 8080
          command: ["echo"]
          args: ["$(hostname -s)", ">", "/var/www/html/index.html"]              
          resources:
            requests:
              memory: "100Mi"
              cpu: 0.5
            limits:
              memory: "100Mi"
              cpu: 0.5
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8080
          #   initialDelaySeconds: 60
          #   periodSeconds: 5
          #   failureThreshold: 3
          #   timeoutSeconds: 2
          volumeMounts:
            - name: www
              mountPath: /var/www/html/
      volumes:
        - name: www
          persistentVolumeClaim:
            claimName: www-nginx
